# PadCast

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README.txt  ROADMAP.md  TODO.md  build_flatpak.fish  build_packs.fish
PadCast/: CMakeLists.txt  TODO.md  app.manifest  com.github.nantr0nic.PadCast.metainfo.xml  padcast.desktop.in  version.rc
PadCast/config/: config.ini
PadCast/include/: PadCast.h  config.h  debounce.h  menus.h  pathmanager.h  win_transparency.h
PadCast/include/mini/: ini.h
PadCast/src/: PadCast.cpp  config.cpp  main.cpp  menus.cpp  win_transparency.cpp  winmain_proxy.cpp
flatpak/: com.github.nantr0nic.PadCast.yml
